--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongodb": "^4.3.1",
+    "mongoose": "^6.2.1",
     "morgan": "~1.9.1",
     "pug": "^3.0.2",
     "uuid": "^8.3.2"
