--- a/package.json
+++ b/package.json
@@ -8,18 +8,14 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
-    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
-    "express": "^4.16.4",
+    "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongodb": "^4.3.1",
     "morgan": "~1.9.1",
-    "passport": "^0.5.2",
-    "passport-google-oauth2": "^0.2.0",
-    "passport-google-oauth20": "^2.0.0",
     "pug": "^3.0.2",
     "uuid": "^8.3.2"
   },
